# qt-qml-cpp-examples

./: .gitignore  LICENSE  README.md
car-dashboard/: Makefile  README.md  imgui.ini  main.cpp
gitus/: GitRepo.cpp  GitRepo.h  README.md  gitus.pro  gitus.qrc  main.cpp  main.ui  window.cpp  window.h
gitus/libgit2/: libgit2.so.0.99  libgit2.so.0.99.0
itw_test/: .gitignore  CMakeLists.txt  README.md
itw_test/data/: sample.json
itw_test/src/: main.cpp  main.qml  qml.qrc  values_model.cpp  values_model.h
itw_test/test/unit_test_proj/: CMakeLists.txt  tst_test_median.cpp
qml-dragdrop-with-copy/: CMakeLists.txt  DropItem.qml  TileBody.qml  ToolBar.qml  main.cpp  main.qml  resources.qrc
